--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -8,6 +8,6 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
 <body>
-    <h1>welcome</h1>
+    <marquee>welcome</marquee>
 </body>
 </html>
