practice with SCSS

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 </head>
+
 <body>
-    <marquee>welcome</marquee>
+    <div class="nav">
+        <div class="left">
+            <a href="#" class="nav__items"><i></i><span>Hey</span></a>
+            <a href="#" class="nav__items"><i></i><span>Hey</span></a>
+            <a href="#" class="nav__items"><i></i><span>Hey</span></a>
+        </div>
+        <div class="right">
+            <input type="text" class="nav__input" placeholder="Search..."/>
+            <button type="submit" class="nav__submit" >Submit</button>
+        </div>
+    </div>
 </body>
+
 </html>
