made an about me page

--- a/SCSS/index.html
+++ b/SCSS/index.html
@@ -11,15 +11,24 @@
 </head>
 
 <body>
-    <div class="nav">
-        <div class="left">
-            <a href="#" class="nav__items"><i></i><span>Hey</span></a>
-            <a href="#" class="nav__items"><i></i><span>Hey</span></a>
-            <a href="#" class="nav__items"><i></i><span>Hey</span></a>
-        </div>
-        <div class="right">
-            <input type="text" class="nav__input" placeholder="Search..."/>
-            <button type="submit" class="nav__submit" >Submit</button>
+    <div class="container">
+        <div class="content">
+                <div class="pic"></div>
+            <div class="title">Caleb Clayson</div>
+            <div class="items">
+                <div class="items__left">
+                    <div class="items__item">Mountain Biking</div>
+                    <div class="items__item">Video Games</div>
+                    <div class="items__item">Coding</div>
+                    <div class="items__item">UI/UX</div>
+                </div>
+                <div class="items__right">
+                    <div class="items__item">Piano</div>
+                    <div class="items__item">Hiking</div>
+                    <div class="items__item">Reading</div>
+                    <div class="items__item">Movies</div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
