more javascript and a fizzbuzz program

--- a/javascript/day1.html
+++ b/javascript/day1.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1 id="header">This is JavaScript</h1>
-    <script>
+    <!-- <script>
         console.log('hello');
-    </script>
-    <script src="js/day1.js" type="text/javascript"></script>
+    </script> -->
+    <script src="js/fizzbuzz.js" type="text/javascript"></script>
 </body>
 </html>
