--- a/javascript/day1.html
+++ b/javascript/day1.html
@@ -11,6 +11,6 @@
     <!-- <script>
         console.log('hello');
     </script> -->
-    <script src="js/fizzbuzz.js" type="text/javascript"></script>
+    <script src="js/day1.js" type="text/javascript"></script>
 </body>
 </html>
