--- a/javascript/day1.html
+++ b/javascript/day1.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <h1 id="header">This is JavaScript</h1>
+    <button onclick="go()">GO</button>
     <!-- <script>
         console.log('hello');
     </script> -->
-    <script src="js/day1.js" type="text/javascript"></script>
+    <script src="js/challenge2.js" type="text/javascript"></script>
 </body>
 </html>
