more jquery practice

--- a/jQuery/index.html
+++ b/jQuery/index.html
@@ -8,12 +8,13 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script defer src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script defer src="main.js"></script>
 </head>
 <body>
     <input class="myinput" type="text" placeholder="recipe here"/>
-    <button onclick="additem()">add item</button>
-    <button onclick="clearlist()">clear list</button>
+    <button class="additem">add item</button>
+    <button class="clearlist">clear list</button>
     <div class="container">
     </div>
 </body>
