made a very basic blackjack game

--- a/XML:HTTP/one_player.html
+++ b/XML:HTTP/one_player.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Blackjack</title>
+    <title>One Player : Blackjack</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
@@ -12,10 +12,16 @@
     <script defer src="main.js"></script>
 </head>
 
-<body>
-    <h1><span>Blackjack</span></h1>
-    <a href="./one_player.html" class="drawCard link">One Player</a>
-    <a href="./two_player.html" class="drawCard link">Two Player</a>
+<body onload="loadDeck()">
+    <h1><a href="./index.html" class="back">Back</a><span>Blackjack</span></h1>
+    <button class="drawCard" onclick="getTwoCards()">Draw Two Cards</button>
+    <div class="content">
+        <div id="card-container-one">
+            <button class="addCard" onclick="addOneCardP1()">Draw Card</button>
+        </div>
+        <div id="card-container-two" class='one-player-two'>
+        </div>
+    </div>
 </body>
 
 </html>
