moving over to js promises

--- a/XML:HTTP/two_player.html
+++ b/XML:HTTP/two_player.html
@@ -12,7 +12,7 @@
     <script defer src="main.js"></script>
 </head>
 
-<body onload="loadDeck()">
+<body onload="getDeck()">
         <h1><a href="./index.html" class="back">Back</a><span>Blackjack</span></h1>
         <button class="drawCard" onclick="getTwoCards()">Draw Two Cards</button>
         <div class="content">
