--- a/kirbyGame/index.html
+++ b/kirbyGame/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Kirby Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <!-- <link rel="stylesheet" type="text/css" media="screen" href="main.css" /> -->
+    <script defer src="sprite.js"></script>
     <script defer src="game.js"></script>
 </head>
 <body>
-    
+    <div id="canvasBox"></div>
 </body>
 </html>
