--- a/modules/index.html
+++ b/modules/index.html
@@ -5,13 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Pokemon Ordering</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     
-    <script type="module" src="main.js"></script>
+    <script defer type="module" src="main.js"></script>
 </head>
 <body>
+    <div class="selectors">
+        <select class="type" onchange="runSomething(this)">
+            <option value="default">Normal</option>
+            <option value="shiny">Shiny</option>
+            <option value="art">Art</option>
+        </select>
+        <input class="search" onchange="searchforpokemon(this)"/>
+    </div>
     <div class="window">
 
 
