--- a/pokemonList/index.html
+++ b/pokemonList/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Pokemon Ordering</title>
+    <title>Pokemon List App</title>
     <link href="./favicon.PNG" rel="shortcut icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
